--- a/css/styles.css
+++ b/css/styles.css
@@ -580,6 +580,9 @@ progress {
 .logo{
     width: 100px
 }
+.logo2{
+  width: 200px
+}
 
 .list-hobbies-item {
     display: flex;
@@ -618,7 +621,7 @@ progress {
 
 .img-fluid {
   max-width: 100%;
-  height: auto;
+  height: 400px;
 }
 
 .img-thumbnail {
@@ -11494,7 +11497,7 @@ footer.footer .social-link:hover {
   height: auto;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../assets/img/programming.png");
+  background: url("../assets/img/code.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
